Changes between 2.2.4 and 2.3.0.dev
-----------------------------------

- fix issue172 duplicate call of pytest.setup-decoratored setup_module
  functions
- fix junitxml=path construction so that if tests change the
  current working directory and the path is a relative path
  it is constructed correctly from the original current working dir.
- fix "python setup.py test" example to cause a proper "errno" return
- fix issue165 - fix broken doc links and mention stackoverflow for FAQ
- fix issue139 - merge FuncargRequest and Item API such that 
  funcarg-functionality is now directly available on the "item" 
  object passed to the various pytest_runtest hooks.  This allows more 
  sensitive behaviour of e.g. the pytest-django plugin which previously 
  had no full access to all instantiated funcargs.
  This internal API re-organisation is a fully backward compatible
  change: existing factories accepting a "request" object will 
  get a Function "item" object which carries the same API.  In fact,
  the FuncargRequest API (or rather then a ResourceRequestAPI)
  could be available for all collection and item nodes but this is
  left for later consideration because it would render the documentation
  invalid and the "funcarg" naming sounds odd in context of
  directory, file, class, etc. nodes.
- catch unicode-issues when writing failure representations
  to terminal to prevent the whole session from crashing
- fix xfail/skip confusion: a skip-mark or an imperative pytest.skip
  will now take precedence before xfail-markers because we
  can't determine xfail/xpass status in case of a skip. see also:
  http://stackoverflow.com/questions/11105828/in-py-test-when-i-explicitly-skip-a-test-that-is-marked-as-xfail-how-can-i-get

- always report installed 3rd party plugins in the header of a test run

- fix issue160: a failing setup of an xfail-marked tests should
  be reported as xfail (not xpass)

- fix issue128: show captured output when capsys/capfd are used
