@@ -1,6 +1,7 @@
 Changes between 2.2.4 and 2.3.0.dev
 -----------------------------------
 
+- fix issue185 monkeypatching time.time does not cause pytest to fail
 - fix issue172 duplicate call of pytest.setup-decoratored setup_module
   functions
 - fix junitxml=path construction so that if tests change the
